force-app/main/default/objects/Subscriptions__c/fields/Date_Reinstated__c.field-meta.xml
<CustomField>
    <fullName>Date_Reinstated__c</fullName>
    <label>Date Reinstated</label>
    <type>Date</type>
</CustomField>