force-app/main/default/objects/Subscriptions__c/fields/Date_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Date_Terminated__c</fullName>
    <label>Date Terminated</label>
    <type>Date</type>
</CustomField>