force-app/main/default/objects/Subscriptions__c/fields/Date_Waived__c.field-meta.xml
<CustomField>
    <fullName>Date_Waived__c</fullName>
    <label>Late Fee Waived</label>
    <type>Date</type>
</CustomField>