force-app/main/default/objects/Subscriptions__c/fields/DATEESTABLISHED__c.field-meta.xml
<CustomField>
    <fullName>DATEESTABLISHED__c</fullName>
    <formula>IF (LEN (TEXT(MONTH(Date_Joined__c )))=2,
TEXT(MONTH(Date_Joined__c )),
&quot;0&quot; &amp; TEXT(MONTH(Date_Joined__c ))
)

&amp; &quot;/&quot; &amp; 

IF(LEN(TEXT(DAY( Date_Joined__c )))=2,
TEXT(DAY( Date_Joined__c )),
&quot;0&quot; &amp; TEXT(DAY(Date_Joined__c ))
)

&amp; &quot;/&quot; &amp;

TEXT(YEAR( Date_Joined__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATEESTABLISHED</label>
    <type>Text</type>
</CustomField>