force-app/main/default/objects/Subscriptions__c/fields/DATELASTMODIFIED__c.field-meta.xml
<CustomField>
    <fullName>DATELASTMODIFIED__c</fullName>
    <formula>IF(LEN(TEXT(MONTH(DATEVALUE( LastModifiedDate ))))==2,TEXT(MONTH(DATEVALUE(LastModifiedDate))),&quot;0&quot; &amp; TEXT(MONTH(DATEVALUE(LastModifiedDate)))) &amp; &quot;/&quot; &amp; IF(LEN(TEXT(DAY(DATEVALUE(LastModifiedDate))))==2,TEXT(DAY(DATEVALUE(LastModifiedDate))),&quot;0&quot; &amp; TEXT(DAY(DATEVALUE(LastModifiedDate))))&amp; &quot;/&quot; &amp;(TEXT(YEAR( DATEVALUE(LastModifiedDate ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATELASTMODIFIED</label>
    <type>Text</type>
</CustomField>