force-app/main/default/objects/Subscriptions__c/fields/DATETERMINATED__c.field-meta.xml
<CustomField>
    <fullName>DATETERMINATED__c</fullName>
    <formula>IF (LEN (TEXT(MONTH( Date_Terminated__c  )))=2,
TEXT(MONTH(Date_Terminated__c  )),
&quot;0&quot; &amp; TEXT(MONTH(Date_Terminated__c )))

&amp; &quot;/&quot; &amp; 

IF(LEN(TEXT(DAY(Date_Terminated__c  )))=2,
TEXT(DAY( Date_Terminated__c )),
&quot;0&quot; &amp; TEXT(DAY(Date_Terminated__c )))

&amp; &quot;/&quot; &amp;

TEXT(YEAR( Date_Terminated__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATETERMINATED</label>
    <type>Text</type>
</CustomField>