force-app/main/default/objects/Subscriptions__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prism field - for reference only</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>