force-app/main/default/objects/Subscriptions__c/fields/Email_Sunset_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sunset_Date__c</fullName>
    <label>Email Sunset – Last Phase</label>
    <type>Date</type>
</CustomField>