force-app/main/default/objects/Subscriptions__c/fields/FacebookGroupMember__c.field-meta.xml
<CustomField>
    <fullName>FacebookGroupMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facebook Group Member</label>
    <type>Checkbox</type>
</CustomField>