force-app/main/default/objects/Subscriptions__c/fields/FoxRoachID__c.field-meta.xml
<CustomField>
    <fullName>FoxRoachID__c</fullName>
    <label>Fox &amp; Roach ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>