force-app/main/default/objects/Subscriptions__c/fields/Future_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Termination_Date__c</fullName>
    <label>Future Termination Date</label>
    <type>Date</type>
</CustomField>