force-app/main/default/objects/Subscriptions__c/fields/Home_Fax__c.field-meta.xml
<CustomField>
    <fullName>Home_Fax__c</fullName>
    <label>Home Fax</label>
    <type>Phone</type>
</CustomField>