force-app/main/default/objects/Subscriptions__c/fields/Import_ID__c.field-meta.xml
<CustomField>
    <fullName>Import_ID__c</fullName>
    <label>Import ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>