force-app/main/default/objects/Subscriptions__c/fields/Import_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Import_Source_ID__c</fullName>
    <label>Import Source ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>