force-app/main/default/objects/Subscriptions__c/fields/Import_Source_Status__c.field-meta.xml
<CustomField>
    <fullName>Import_Source_Status__c</fullName>
    <label>Import Source Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>