force-app/main/default/objects/Subscriptions__c/fields/IsExcludedFromAutomatedSuspension__c.field-meta.xml
<CustomField>
    <fullName>IsExcludedFromAutomatedSuspension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, excludes this particular Subscription from being eligible for auto-suspend</description>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>