force-app/main/default/objects/Subscriptions__c/fields/IsLateFeeWaiverRequest__c.field-meta.xml
<CustomField>
    <fullName>IsLateFeeWaiverRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Late Fee Waiver</label>
    <type>Checkbox</type>
</CustomField>