force-app/main/default/objects/Subscriptions__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>JobTitle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appraiser</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Associate Broker</fullName>
            </value>
            <value>
                <fullName>Broker / Manager</fullName>
            </value>
            <value>
                <fullName>Broker of Record</fullName>
            </value>
            <value>
                <fullName>Broker Owner</fullName>
            </value>
            <value>
                <fullName>Certified Appraiser</fullName>
            </value>
            <value>
                <fullName>Corporate Officer</fullName>
            </value>
            <value>
                <fullName>Executive Vice President</fullName>
            </value>
            <value>
                <fullName>Listing Administrator</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Office Administrator</fullName>
            </value>
            <value>
                <fullName>Office Broker / Manager</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Office Sales Manager</fullName>
            </value>
            <value>
                <fullName>Other Association Staff</fullName>
            </value>
            <value>
                <fullName>Principal Broker</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>REALTOR</fullName>
            </value>
            <value>
                <fullName>REALTOR - Associate</fullName>
            </value>
            <value>
                <fullName>Regional Vice President</fullName>
            </value>
            <value>
                <fullName>Sales Associate</fullName>
            </value>
            <value>
                <fullName>Salesperson</fullName>
            </value>
            <value>
                <fullName>Vice President / Sales Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>