force-app/main/default/objects/Subscriptions__c/fields/LateFeeWaiverRequestMessage__c.field-meta.xml
<CustomField>
    <fullName>LateFeeWaiverRequestMessage__c</fullName>
    <label>Late Fee Waiver Request Message</label>
    <length>150</length>
    <type>Text</type>
</CustomField>