force-app/main/default/objects/Subscriptions__c/fields/Mobile_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Formula__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( Mobile_Phone__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
    <label>Mobile Phone Formula</label>
    <type>Text</type>
</CustomField>