force-app/main/default/objects/Subscriptions__c/fields/MRIS_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>MRIS_Login_ID__c</fullName>
    <label>MRIS Login ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>