force-app/main/default/objects/Subscriptions__c/fields/NATIONALACCOUNTID__c.field-meta.xml
<CustomField>
    <fullName>NATIONALACCOUNTID__c</fullName>
    <formula>Related_Location_Broker_Office__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NATIONALACCOUNTID</label>
    <type>Text</type>
</CustomField>