force-app/main/default/objects/Subscriptions__c/fields/NRDS_ID__c.field-meta.xml
<CustomField>
    <fullName>NRDS_ID__c</fullName>
    <label>NRDS_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>