force-app/main/default/objects/Subscriptions__c/fields/OnHold_Reason__c.field-meta.xml
<CustomField>
    <fullName>OnHold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>