force-app/main/default/objects/Subscriptions__c/fields/Pager__c.field-meta.xml
<CustomField>
    <fullName>Pager__c</fullName>
    <label>Pager</label>
    <type>Phone</type>
</CustomField>