force-app/main/default/objects/Subscriptions__c/fields/Preferred_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Last_Name__c</fullName>
    <label>Preferred Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>