force-app/main/default/objects/Subscriptions__c/fields/Preferred_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Ext__c</fullName>
    <label>Preferred Phone Ext</label>
    <type>Phone</type>
</CustomField>