force-app/main/default/objects/Subscriptions__c/fields/Previous_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Type__c</fullName>
    <label>Previous Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>