force-app/main/default/objects/Subscriptions__c/fields/Primary_Account_Association__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Association__c</fullName>
    <formula>Primary_Subscription_Association__r.Association__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Account Association</label>
    <type>Text</type>
</CustomField>