force-app/main/default/objects/Subscriptions__c/fields/Primary_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Formula__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Primary_Phone__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
    <label>Primary Phone Formula</label>
    <type>Text</type>
</CustomField>