force-app/main/default/objects/Subscriptions__c/fields/Primary_Subscription_Association__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscription_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Subscription Association</label>
    <referenceTo>Related_Association__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>