force-app/main/default/objects/Subscriptions__c/fields/PrimarySubNum__c.field-meta.xml
<CustomField>
    <fullName>PrimarySubNum__c</fullName>
    <description>This field is used in Rollup Summary Field on Contact.  It is how the Primary Subscriber ID is copied to the Contact.</description>
    <formula>VALUE(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrimarySubNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>