force-app/main/default/objects/Subscriptions__c/fields/PrismSubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>PrismSubscriptionID__c</fullName>
    <label>PrismSubscriptionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>