force-app/main/default/objects/Subscriptions__c/fields/Private_Email__c.field-meta.xml
<CustomField>
    <fullName>Private_Email__c</fullName>
    <label>Private Email</label>
    <type>Email</type>
</CustomField>