force-app/main/default/objects/Subscriptions__c/fields/QAS_Billing_POBox__c.field-meta.xml
<CustomField>
    <fullName>QAS_Billing_POBox__c</fullName>
    <label>Home POBox</label>
    <length>50</length>
    <type>Text</type>
</CustomField>