force-app/main/default/objects/Subscriptions__c/fields/QAS_Billing_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>QAS_Billing_Record_Type__c</fullName>
    <label>QAS Home Record Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>