force-app/main/default/objects/Subscriptions__c/fields/QAS_Billing_Street_Direction__c.field-meta.xml
<CustomField>
    <fullName>QAS_Billing_Street_Direction__c</fullName>
    <label>Home Street Direction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>