force-app/main/default/objects/Subscriptions__c/fields/QAS_Billing_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>QAS_Billing_Validation_Status__c</fullName>
    <description>This field is meant for Billing address</description>
    <inlineHelpText>Please do not enter anything in this field</inlineHelpText>
    <label>QAS Home Validation Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>