force-app/main/default/objects/Subscriptions__c/fields/QAS_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>QAS_Mailing_Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>