force-app/main/default/objects/Subscriptions__c/fields/QAS_Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>QAS_Mailing_County__c</fullName>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>