force-app/main/default/objects/Subscriptions__c/fields/QAS_Mailing_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>QAS_Mailing_Record_Type__c</fullName>
    <label>QAS Mailing Record Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>