force-app/main/default/objects/Subscriptions__c/fields/QAS_Mailing_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>QAS_Mailing_Unit_Type__c</fullName>
    <label>Unit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>