force-app/main/default/objects/Subscriptions__c/fields/QAS_Validation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>QAS_Validation_Timestamp__c</fullName>
    <description>This field is meant for Shipping address</description>
    <inlineHelpText>Please do not enter anything in this field</inlineHelpText>
    <label>QAS Validation Timestamp</label>
    <type>DateTime</type>
</CustomField>