force-app/main/default/objects/Subscriptions__c/fields/Recurring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Fee__c</fullName>
    <label>Recurring Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>