force-app/main/default/objects/Subscriptions__c/fields/Related_Broker_Code__c.field-meta.xml
<CustomField>
    <fullName>Related_Broker_Code__c</fullName>
    <description>Used for generating outbound messages that include the broker code.</description>
    <formula>Related_Location_Broker_Office__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Broker Code</label>
    <type>Text</type>
</CustomField>