force-app/main/default/objects/Subscriptions__c/fields/Related_Location_Broker_Office__c.field-meta.xml
<CustomField>
    <fullName>Related_Location_Broker_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Location (Office ID)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>