force-app/main/default/objects/Subscriptions__c/fields/RETS_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>RETS_Product_Count__c</fullName>
    <description>Used to count Order Products</description>
    <label>RETS Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>