force-app/main/default/objects/Subscriptions__c/fields/Service_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Service_Jurisdiction__c</fullName>
    <label>Service Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRIGHT</fullName>
            </value>
            <value>
                <fullName>MRIS</fullName>
            </value>
            <value>
                <fullName>TREND</fullName>
            </value>
            <value>
                <fullName>CURE</fullName>
                <isActive>false</isActive>
                <label>CURE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>