force-app/main/default/objects/Subscriptions__c/fields/SF_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Subscription_ID__c</fullName>
    <label>SF Subscription ID</label>
    <type>AutoNumber</type>
</CustomField>