force-app/main/default/objects/Subscriptions__c/fields/SFDC_Application__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Application</label>
    <referenceTo>MRIS_Application__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>