force-app/main/default/objects/Subscriptions__c/fields/SourceModificationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>SourceModificationTimestamp__c</fullName>
    <label>SourceModificationTimestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>