force-app/main/default/objects/Subscriptions__c/fields/Status_Change_Fee__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Fee__c</fullName>
    <label>Status Change Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>$250</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>