force-app/main/default/objects/Subscriptions__c/fields/Status_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Reason__c</fullName>
    <label>Status Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reinstate</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Subscriber Requested</fullName>
            </value>
            <value>
                <fullName>Broker Requested</fullName>
            </value>
            <value>
                <fullName>Waived - Coastal</fullName>
            </value>
            <value>
                <fullName>Waived - Cumberland, NJ</fullName>
            </value>
            <value>
                <fullName>Waived - Harrisburg</fullName>
            </value>
            <value>
                <fullName>Waived - Lancaster</fullName>
            </value>
            <value>
                <fullName>Waived - Lebanon</fullName>
            </value>
            <value>
                <fullName>Waived - RAYAC</fullName>
            </value>
            <value>
                <fullName>Waived - Sussex</fullName>
            </value>
            <value>
                <fullName>Waived - TREND</fullName>
            </value>
            <value>
                <fullName>Compliance Related</fullName>
            </value>
            <value>
                <fullName>Promotional</fullName>
            </value>
            <value>
                <fullName>Board Provided</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
            <value>
                <fullName>Bill Broker</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Commission Provided</fullName>
            </value>
            <value>
                <fullName>Invalid License</fullName>
            </value>
            <value>
                <fullName>Broker Paid</fullName>
            </value>
            <value>
                <fullName>Inactive Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>